.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trevas-lab
spec:
  clusterIP: None
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: trevas-lab
---
apiVersion: v1
kind: Service
metadata:
  name: trevas-spark-ui
spec:
  clusterIP: None
  ports:
    - name: http
      targetPort: 4040
      port: 4040
  selector:
    app: trevas-lab
