.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trevas-lab
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - trevas-api.example.com
  rules:
    - host: trevas-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trevas-lab
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trevas-spark-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - trevas-spark-ui.example.com
  rules:
    - host: trevas-spark-ui.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trevas-spark-ui
                port:
                  number: 4040
